feat: implement security filter and enhance Swagger configuration for JWT authentication